// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummwary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $250.00
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummwary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    4
     
    expenses
     totalling 
    $2,500.00
  </h1>
</div>
`;

exports[`should render expensesSummary correctly 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;
